# ring_buffer

./: .cmake-format  .cspell.yaml  .cspell.yml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  requirements.cmake
.github/workflows/: cpp_unit_tests.yml  generate_artifacts.yml  maintain_tags.yml  on_push.yml  unit_tests.yml
cmake/: component-install.cmake  git_utils.cmake  install.cmake  install_header_licenses.cmake  requirements.cmake  ring_buffer_install.cmake
doc/: CMakeLists.txt  main.md
src/: CMakeLists.txt  ring_buffer.c  ring_buffer_16bit.c  ring_buffer_version.c
src/include/embetech/: ring_buffer.h  ring_buffer_16bit.h
tests/: CMakeLists.txt  ring_buffer_ut.cpp
